--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       content="Web site created using create-react-app"
     />
     <title>Eway Technology</title>
-    <link rel="stylesheet" href="/css/all.css">
+    <link rel="stylesheet" href="%PUBLIC_URL%/css/all.css">
   </head>
   <body>
     <div id="root"></div>
